Finished testing for GUI controller including adjusting mocks